WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153350
Fix the !ENABLE(INDEXED_DATABASE) build after
r195443
https://bugs.webkit.org/show_bug.cgi?id=153350
Summary
Fix the !ENABLE(INDEXED_DATABASE) build after r195443
Csaba Osztrogonác
Reported
2016-01-22 02:17:43 PST
http://trac.webkit.org/changeset/195443
broke the !ENABLE(INDEXED_DATABASE) build, including the Apple Windows and the WinCairo build too.
Attachments
Patch for landing
(1.21 KB, patch)
2016-01-22 02:18 PST
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2016-01-22 02:18:52 PST
Created
attachment 269561
[details]
Patch for landing
Csaba Osztrogonác
Comment 2
2016-01-22 02:23:08 PST
just to document, build logs can be found here: -
https://build.webkit.org/builders/WinCairo%2064-Bit%20Release/builds/53084
-
https://build.webkit.org/builders/Apple%20Win%20Release%20%28Build%29/builds/75280
Otherwise please check the EWS before landing and the waterfall after landing a patch to avoid build breaks.
WebKit Commit Bot
Comment 3
2016-01-22 03:06:15 PST
Comment on
attachment 269561
[details]
Patch for landing Clearing flags on attachment: 269561 Committed
r195449
: <
http://trac.webkit.org/changeset/195449
>
WebKit Commit Bot
Comment 4
2016-01-22 03:06:17 PST
All reviewed patches have been landed. Closing bug.
Brady Eidson
Comment 5
2016-01-22 08:49:07 PST
(In reply to
comment #2
)
> just to document, build logs can be found here: > -
https://build.webkit.org/builders/WinCairo%2064-Bit%20Release/builds/53084
> - >
https://build.webkit.org/builders/Apple%20Win%20Release%20%28Build%29/builds/
> 75280 > > Otherwise please check the EWS before landing and the > waterfall after landing a patch to avoid build breaks.
EWS was in epically bad shape last night due to the server spitting 503s and having to be rebooted, and the commit queue is actually what landed this patch. I've been tooting this horn for years now - If we are going to rely on tools, the tools have to actually do the job perfectly (or at least better than an attentive person would). And they are far from that standard. See: The Automation Paradox. Sorry about the break and thanks for the fix.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug