Fix the !ENABLE(INDEXED_DATABASE) build after r195443 https://bugs.webkit.org/show_bug.cgi?id=153350

Unreviewed buildfix.


* page/Page.cpp:
(WebCore::Page::setSessionID):


Canonical link: https://commits.webkit.org/171415@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195449 268f45cc-cd09-0410-ab3c-d52691b4dbfc